# typship

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: publish-package.yml  release.yml
src/: config.rs  lib.rs  main.rs  model.rs  utils.rs
src/commands/: check.rs  clean.rs  copy.rs  dev.rs  download.rs  exclude.rs  generate.rs  host.rs  init.rs  install.rs  login.rs  mod.rs  publish.rs
src/regs/: universe.rs
src/utils/: walkers.rs
tests/: pack_test.rs  walker_test.rs
tests/fixtures/example/: lib.typ
tests/walker_test/: typst.toml
typship-cli/: Cargo.toml
typship-cli/src/: commands.rs  config.rs  main.rs  model.rs  utils.rs
typship-cli/src/commands/: clean.rs  copy.rs  dev.rs  download.rs  exclude.rs  init.rs  install.rs  mod.rs  publish.rs  sync.rs
typship-cli/src/model/: manifest.rs
typship-cli/src/regs/: universe.rs
typship-pack/: Cargo.toml
typship-pack/src/: error.rs  fs.rs  gitcl.rs  http.rs  lib.rs  memory.rs  ops.rs  release.rs  tarball.rs  universe.rs
