[workspace]
resolver = "3"
members = ["typship-cli", "typship-pack"]
default-members = ["typship-cli"]

[workspace.package]
version = "0.4.2"
edition = "2024"
repository = "https://github.com/sjfhsjfh/typship"
homepage = "https://github.com/sjfhsjfh/typship"
readme = "README.md"
license-file = "LICENSE"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
