[workspace]
resolver = "3"
members = ["typship-cli", "typship-pack"]
default-members = ["typship-cli"]

[workspace.package]
version = "0.4.2"
edition = "2024"
repository = "https://github.com/sjfhsjfh/typship"
homepage = "https://github.com/sjfhsjfh/typship"
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
typship-pack = { path = "./typship-pack" }

dirs = "6.0.0"
ecow = "0.2.6"
tar = "0.4.44"
toml = "0.9.5"
tinymist-std = "0.13.24"
typst = "0.13.1"
reqwest = "0.12.23"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
