[package]
name = "typship-pack"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
license-file.workspace = true


[dependencies]

ecow.workspace = true
tar.workspace = true
typst.workspace = true
tinymist-std.workspace = true

toml = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }


[features]
fs-pack = ["walkdir"]
gitcl-pack = ["toml", "tinymist-std/system"]
http-pack = ["reqwest", "dirs"]
release-pack = ["http-pack"]
universe-pack = ["http-pack"]
